--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@babel/core": "^7.12.7",
+		"@babel/plugin-transform-runtime": "^7.13.9",
 		"@babel/preset-env": "^7.12.7",
 		"@babel/preset-react": "^7.12.7",
 		"@babel/preset-typescript": "^7.12.7",
