--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
 		"tailwindcss": "^2.0.1",
 		"terser-webpack-plugin": "^5.0.3",
 		"typescript": "^4.1.2",
+		"url-loader": "^4.1.1",
 		"webpack": "^5.6.0",
 		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^3.11.0"
