--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "5.lines",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "start": "nodemon app.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.5",
-    "email-validator": "^2.0.4",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "moment": "^2.29.1",
-    "multer": "^1.4.2",
-    "mysql": "^2.18.1",
-    "mysql2": "^2.2.5"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
-  }
+    "name": "5.lines",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "start": "nodemon app.js",
+        "dev": "nodemon --inspect app.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "cookie-parser": "^1.4.5",
+        "email-validator": "^2.0.4",
+        "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "moment": "^2.29.1",
+        "multer": "^1.4.2",
+        "mysql": "^2.18.1",
+        "mysql2": "^2.2.5"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.7"
+    }
 }
