--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
 	"main": "index.tsx",
 	"scripts": {
 		"start": "webpack-dev-server --open",
+		"dev": "webpack-dev-server --inspect --open",
 		"build": "webpack --config ./webpack.config.prod.js"
 	},
 	"keywords": [],
